@@ -16,7 +16,7 @@
 #along with this program; if not, write to the Free Software
 #Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-function smarty_function_cms_init_editor($params, &$smarty)
+function smarty_cms_function_cms_init_editor($params, &$smarty)
 {
   $wysiwyg = get_parameter_value($params,'wysiwyg');
   $force = cms_to_bool(get_parameter_value($params,'force',0));
