@@ -21,6 +21,7 @@ Core - General
 - Requests for modules that are not installed/enabled, or for invalid actions will now result in 404 errors.
 - Fixed problem where restricted content editors could implicitly change the page alias.
 - Improvements to the system information page, particularly the bbcode output.
+- cms_init_editor, form_start, and cms_action_url plugins are no longer cachable.
 
 MicroTiny v2.0.2
 - Now add page hierarchy to autocomplete text when using the linker.
